# blit

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVLOG.md  LICENSE  Makefile  README.md  ROADMAP.md  build.rs
.github/workflows/: ci.yml  linux-async.yml  macos-async.yml  release.yml  windows-async.yml  windows.yml
bench/: README.md  common.sh  flush_local.sh  flush_truenas_zfs.sh  robocopy_help.txt  rsyncd_min.sh  rsyncd_once.sh  run_local.sh  run_pull.sh  run_push.sh  run_real_data.sh  run_real_data_robosync.sh  run_real_data_rsync.sh  setup_datasets.sh
scripts/: build-linux.sh  build-macos.sh  build-musl.sh  build-windows.ps1  build-windows.sh  guard-protocol.sh  package.sh  smoke-linux.sh  smoke-local.sh  smoke-macos.sh  smoke-perf.sh  smoke-tls.sh  smoke-windows.bat  smoke-windows.ps1
src/: algorithm.rs  buffer.rs  checksum.rs  cli.rs  concurrent_delta.rs  copy.rs  fs_enum.rs  lib.rs  log.rs  logger.rs  main.rs  net.rs  net_async.rs  progress.rs  protocol.rs  protocol_core.rs  streaming_delta.rs  tar_stream.rs  tls.rs  url.rs  win_fs.rs  windows_enum.rs
src/tui/: app.rs  mod.rs  remote.rs  run.rs  theme.rs  ui.rs
tests/: tls_e2e.rs
