[package]
name = "robosync"
version = "3.1.0"
edition = "2021"
authors = ["RoboSync Contributors"]
description = "High-performance file synchronization with robocopy-style CLI"
license = "MIT"

[dependencies]
# Core dependencies only - no bloat
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"  # Progress bars
ctrlc = "3.4"        # Signal handling
rayon = "1.10"      # Parallel iterators
tar = "0.4"         # For tar streaming
walkdir = "2.5"     # Directory traversal
parking_lot = "0.12" # Better mutexes
md5 = "0.7"         # For checksum support
sha2 = "0.10"       # For strong checksums
blake3 = "1.0"      # For fast checksums
uuid = { version = "1.0", features = ["v4"] } # Added for unique sync job IDs
serde = { version = "1.0", features = ["derive"] } # (may be used elsewhere)
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] } # Asynchronous I/O
quinn = "0.10" # QUIC transport for high-performance networking
rustls = "0.22" # TLS support for secure connections
chrono = { version = "0.4" }
filetime = "0.2"
zstd = "0.12"
bincode = "1.3"
tempfile = "3"

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"        # For sendfile, copy_file_range

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinSock",
] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
