[package]
name = "blit"
version = "1.0.0"
edition = "2021"
authors = ["Blit Contributors"]
description = "High-performance file synchronization with fast mirror/copy/move"
license = "MIT"

[build-dependencies]
embed-resource = "2.4"

[dependencies]
normpath = "1.2.0"
# Core dependencies only - no bloat
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"  # Progress bars
ctrlc = "3.4"        # Signal handling
rayon = "1.10"      # Parallel iterators
num_cpus = "1.0"    # CPU count detection for optimal thread configuration
tar = "0.4"         # For tar streaming
walkdir = "2.5"     # Directory traversal
parking_lot = "0.12" # Better mutexes
md5 = "0.7"         # For checksum support
sha2 = "0.10"       # For strong checksums
blake3 = "1.0"      # For fast checksums
uuid = { version = "1.0", features = ["v4"] } # Added for unique sync job IDs
serde = { version = "1.0", features = ["derive"] } # (may be used elsewhere)
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.35", features = ["full"] } # Asynchronous I/O
quinn = "0.11" # QUIC transport; aligns with rustls 0.22 and ring >= 0.17
rustls = "0.22" # TLS support for secure connections
rustls-pemfile = "2.0" # PEM file parsing for TLS certificates
rcgen = "0.12" # Self-signed certificate generation
tokio-rustls = "0.25" # Async TLS for tokio
mdns-sd = "0.7"
hostname = "0.3"
chrono = { version = "0.4" }
filetime = "0.2"
bincode = "1.3"
tempfile = "3"
sysinfo = "0.31"
lazy_static = "1.4"
ratatui = { version = "0.26" }
crossterm = { version = "0.27" }
unicode-width = { version = "0.1" }

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"        # For sendfile, copy_file_range

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Security_Authorization",
] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[features]
default = []

[[bin]]
name = "blit"
path = "src/main.rs"

[[bin]]
name = "blitd"
path = "src/bin/blitd.rs"

[[bin]]
name = "blitty"
path = "src/bin/blitty.rs"
